# mp-deploy-homelab

./: .envrc  .gitignore  .pre-commit-config.yaml  .yamllint  pyproject.toml  renovate.json5
.agents/skills/add-service-schema-generation/: SKILL.md
.agents/skills/pulumi-kubectl-deployment-loop/: SKILL.md
.github/workflows/: quality-check.yaml
scripts/: run-all-checks.sh  run-ansible-checks.sh
services/ingress/: pyproject.toml
services/ingress/pulumi/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py
services/ingress/pulumi/ingress/: cloudflared.py  model.py
services/kubernetes/: pyproject.toml
services/kubernetes/ansible/: README.md  ansible.cfg
services/kubernetes/ansible/inventory/prod/: hosts.yaml
services/kubernetes/ansible/inventory/prod/group_vars/all/: microk8s.yaml
services/kubernetes/ansible/playbooks/: install-kernel-modules-extra.yaml  mount-bulk-storage.yaml  update-microk8s.yaml
services/kubernetes/pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml
services/kubernetes/pulumi/assets/cloud-init/: cloud-config.yaml
services/kubernetes/pulumi/kubernetes/: kube_state_metrics.py  metallb.py  microk8s.py  model.py  samba.py  traefik.py
services/observability/: README.md  pyproject.toml
services/observability/pulumi/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py
services/observability/pulumi/assets/: grafana-backup.py
services/observability/pulumi/assets/alloy/: config.alloy.j2
services/observability/pulumi/observability/: __init__.py  alloy.py  app.py  constants.py  gateway.py  grafana.py  kube_state_metrics.py  logs.py  loki.py  mimir.py  model.py
services/paperless/: pyproject.toml
services/paperless/pulumi/: Pulumi.dev.yaml  Pulumi.prod-fisi.yaml  Pulumi.prod-juno.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py
services/paperless/pulumi/assets/: rclone-sync.sh
services/paperless/pulumi/paperless/: app.py  model.py  paperless.py
services/proxmox/ansible/: ansible-requirements.yaml  ansible.cfg
services/proxmox/ansible/inventory/common/group_vars/pve/: host-backup.yaml
services/proxmox/ansible/inventory/dev/group_vars/pbs/: api.yaml
services/proxmox/ansible/inventory/prod/: hosts.yaml
services/proxmox/ansible/inventory/prod/group_vars/pbs/: host-backup.yaml
services/proxmox/ansible/inventory/prod/group_vars/pve/: prometheus.yaml  pve-exporter.yaml
services/proxmox/ansible/playbooks/: main.yaml  proxmox-cpufreq.yaml  proxmox-host-backup.yaml  proxmox-local-snippets.yaml  proxmox-locales.yaml  proxmox-node-exporter.yaml  proxmox-prometheus.yaml  proxmox-pve-exporter.yaml  proxmox-swap.yaml
services/proxmox/ansible/playbooks/tasks/: proxmox-api-token-pve.yaml
services/proxmox/ansible/playbooks/templates/: prometheus-ct.yml.j2  prometheus-pve-exporter.service.j2  prometheus-pve-exporter.yml.j2
services/samba/: pyproject.toml
services/samba/pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml
services/samba/pulumi/assets/cloud-init/: cloud-config.yaml
services/samba/pulumi/samba/: app.py  model.py
services/utils/src/utils/: instances.py  model.py
services/utils/src/utils/unify/: __init__.py  dns.py
utils/: pyproject.toml
utils/src/utils/unify/: dns.py
