[project]
name = "homelab"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ingress",
    "kubernetes",
    "observability",
    "paperless",
    "proxmox",
    "samba",
]

[dependency-groups]
dev = [
    "ansible-lint>=24.12.2",
    "pip>=26.0.1",
    "prek>=0.3.8",
    "pyright>=1.1.368,!=1.1.401",
    "ruff>=0.9.1",
]

[tool.uv.sources]
ingress = { workspace = true }
kubernetes = { workspace = true }
observability = { workspace = true }
paperless = { workspace = true }
proxmox = { workspace = true }
samba = { workspace = true }
utils = { workspace = true }

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = [
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "ERA",    # eradicate (commented out code)
    "G",      # flake8-logging-format
    "I",      # isort
    "ISC",    # flake8-implicit-string-concat
    "PL",     # Pylint
    "RET",    # flake8-return
    "RUF100", # unused noqa
    "SLF",    # flake8-self
]
ignore = [
    "ISC001",  # single line string concat  # disabled per hint from ruff reg. conflict with formatter
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison  # we do this if value is just used once
    "PLR1711", # useless return  # we return None explicitly
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
preview = true  # support markdown formatting

[tool.pyright]
useLibraryCodeForTypes = true
include = ["services/**/*.py"]
exclude = ["**/node_modules", "**/__pycache__"]
deprecateTypingAliases = true
reportAssertAlwaysTrue = true
reportCallInDefaultInitializer = true
reportConstantRedefinition = true
reportDeprecated = true
reportDuplicateImport = true
reportImplicitOverride = true
reportImplicitStringConcatenation = false       # we do this to split strings due to line length
reportImportCycles = false                      # we do have cycles for type checking only
reportIncompleteStub = true
reportInconsistentConstructor = true
reportInvalidStringEscapeSequence = true
reportInvalidStubStatement = true
reportInvalidTypeVarUse = true
reportMatchNotExhaustive = true
# reportMissingSuperCall = true  # broken, false positives
reportPrivateUsage = true
reportPropertyTypeMismatch = true
reportSelfClsParameterName = true
reportTypeCommentUsage = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
reportUnsupportedDunderAll = true
reportUnusedImport = true
reportUnusedVariable = true
reportWildcardImportFromLibrary = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

# Regexes for lines to exclude from consideration
exclude_lines = [
    # have to re-enable the standard pragma:
    "pragma: no cover",

    # tests don't hit defensive assertion code:
    "raise NotImplementedError",

    # "..." null statement (as used in protocols) does not require coverage:
    "\\.\\.\\.",

    # non-runnable code isn't run during tests:
    "if 0:",
    "if __name__ == .__main__.:",
    "if .*TYPE_CHECKING:",

    # do not measure coverage in platform dependent switches:
    "sys.platform == '",
    "sys.platform in",
]

[tool.config-models.ingress]
root = "services/ingress/pulumi"
model = "ingress.model:PulumiConfigRoot"

[tool.config-models.kubernetes]
root = "services/kubernetes/pulumi"
model = "kubernetes.model:PulumiConfigRoot"

[tool.config-models.paperless]
root = "services/paperless/pulumi"
model = "paperless.model:PulumiConfigRoot"

[tool.config-models.observability]
root = "services/observability/pulumi"
model = "observability.model:PulumiConfigRoot"

[tool.config-models.samba]
root = "services/samba/pulumi"
model = "samba.model:PulumiConfigRoot"
