[project]
name = "kubernetes"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.147.0",
    "pulumi-proxmoxve>=6.18.1",
    "pydantic[email]>=2.10.1",
    "jinja2>=3.1.4",
    "pulumi-command>=1.0.1",
    "pulumi-kubernetes>=4.21.0",
    "utils",
]

[tool.setuptools.packages.find]
exclude = ["ansible"]
